<resources>
    <string name="app_name">Walk Route Generator</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_friend_list">Friends</string>
    <string name="menu_group_list">Groups</string>
    <string name="menu_scoreboard">Scoreboard</string>
    <string name="menu_profile">Profile</string>

    <string name="label_route">Route</string>
    <string name="label_create_schedule">Create schedule</string>
    <string name="label_group">Group</string>
    <string name="label_user">User</string>
    <string name="label_title">Title</string>
    <string name="label_time">Time</string>
    <string name="label_days">Days</string>
    <string name="label_add_friend">Add a friend</string>
    <string name="label_ignore_request">Ignore</string>
    <string name="label_accept_request">Accept</string>
    <string name="label_your_requests">Your friend requests</string>
    <string name="label_your_friends">Your friends</string>
    <string name="label_groups">Groups</string>
    <string name="label_join_group">Join</string>

    <string name="button_generate_route">Generate walk route</string>
    <string name="button_create_schedule">Create a schedule</string>

    <string name="group_name">Name</string>
    <string name="group_description">Description</string>

    <string name="button_monday">M</string>
    <string name="button_tuesday">T</string>
    <string name="button_wednesday">W</string>
    <string name="button_thursday">T</string>
    <string name="button_friday">F</string>
    <string name="button_saturday">S</string>
    <string name="button_sunday">S</string>

    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_send">Send</string>

    <string-array name="walkRouteLengthOptions">
        <item>Hours</item>
        <item>Kilometers</item>
    </string-array>

    <string name="title_activity_walk_route">Walk Route Generator</string>
    <string name="log_out">Log out</string>

</resources>