<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_friend_list"
            android:title="@string/menu_friend_list" />
        <item
            android:id="@+id/nav_group_list"
            android:title="@string/menu_group_list" />
        <item
            android:id="@+id/nav_scoreboard"
            android:title="@string/menu_scoreboard" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />
    </group>
</menu>